samples/_failures_safe/1761002124_35ddb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef1709a9.c: In function ‘main’:
./samples/SAFE/__tmp_ef1709a9.c:180:29: error: expected ‘)’ at end of input
  180 |         if (sm.current_state
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_ef1709a9.c:180:9: error: expected declaration or statement at end of input
  180 |         if (sm.current_state
      |         ^~
./samples/SAFE/__tmp_ef1709a9.c:180:9: error: expected declaration or statement at end of input
